# car_rl

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  autonomouscar.py  dockerbash.sh  dockerrun.sh  mav.parm  mav.tlog  package.xml  solution.py
.github/workflows/: docker-image.yml
car_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
car_ws/src/: commander.sh  cv.sh  mavros.sh  runall.sh
car_ws/src/car_vision/: CMakeLists.txt
car_ws/src/car_vision/scripts/: lane_finder.py  lane_finder_video (copy).py  lane_finder_video.py  road_seg.py
car_ws/src/carrl_interface/: CMakeLists.txt
car_ws/src/tan/: CMakeLists.txt
car_ws/src/tan/src/: go_to_pos.cpp  mpc_commander.cpp  mpc_commander_opt.cpp  mpc_commander_opt_curve.cpp  tan_commander_curve.cpp  test_curve.cpp  test_path.cpp  vel_commander.cpp
docker/: Dockerfile  base  build  build2~  entrypoint.sh  new_terminal  paste_dockerd  run
launch/: spawn_model.launch  spawn_prius.launch
misc/: mav.tlog.raw
misc/rl-hw1/envs/: mountain_hill_env.py
misc/rl-hw1/part1/: __init__.py  tabular_value_iteration.py
misc/rl-hw1/part2/: __init__.py  discretize.py
misc/rl-hw1/utils/: utils.py
rl-hw1/: run_part2_ab.py
rl-hw1/data/part3_a/DoubleIntegratorEnv/: log.txt  params.json  progress.csv
rl-hw1/data/part3_a/MountainCarEnv/: log.txt  params.json  progress.csv
rl-hw1/part3/: continous_value_iteration.py  look_ahead_policy.py
scripts/: LineFollowing.py  autonomouscar.py  keyboard_control.py  sensormessages.py  solution.py
service_client_lib/: CMakeLists.txt
service_client_lib/include/: service_calls.hpp
service_client_lib/src/: service_calls.cpp
share/: #.gitignore#  a.txt  cyclone_dds_config.xml  entrypoint.sh  nvidia-jetpack_5.0-b114_arm64.deb  packages.txt  packages.txt~  trusted-keys  trusted.gpg
share/ackermann_steering_control/: CMakeLists.txt  package.xml
share/ackermann_steering_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
share/ackermann_steering_control/log/: latest_build
share/ackermann_steering_control/src/: ackermann_steering_controller_node.cpp  odometry.h  teleop_steering_keyboard.py
share/ackermann_steering_control/src/install/: local_setup.sh  setup.sh
share/ackermann_steering_control/src/log/: latest_build
share/docker/: Dockerfile  run
share/goal/: CMakeLists.txt  CMakeLists.txt~  package.xml
share/goal/src/: goal.cpp  goal.cpp~
share/lane_boundary/: package.xml  setup.cfg  setup.py
share/lane_boundary/lane_boundary/: lane_boundary.py  lane_boundary.py~
share/lane_boundary/lane_boundary/submodules/: lane.py
share/lane_ims/: mav.parm  mav.tlog  mav.tlog.raw
share/launch/: launch.py~  nogps.sh  nogps.sh~  runall.sh  runall.sh~
share/lgsvl_firmware/ackermann_to_lgsvl_control/: package.xml  setup.cfg  setup.py
share/lgsvl_firmware/ackermann_to_lgsvl_control/ackermann_to_lgsvl_control/: ackermann_to_lgsvl_control.py
share/mock_gps/: CMakeLists.txt  package.xml
share/mock_gps/src/: mock_gps.cpp
share/model_description/: CMakeLists.txt
share/model_description/install/: local_setup.sh  setup.sh
share/model_description/launch/: display.launch.py
share/model_description/log/: latest_build
share/model_description/src/descriptions/: sam_bot_description.urdf
share/msg_interface/: CMakeLists.txt
share/msg_interface/msg/: Control.msg
share/px4_node/: CMakeLists.txt  package.xml
share/px4_node/src/: px4_node original.cpp  px4_node.cpp  px4_node.cpp~
share/ros_arduino_comm/src/: ros_arduino_comm.cpp
share/service_client_lib/: CMakeLists.txt  package.xml
share/service_client_lib/include/service_client_lib/: service_calls.hpp
share/service_client_lib/src/: main.cpp  service_calls.cpp  service_client_lib.cpp
share/service_interface/: CMakeLists.txt
share/simple_test_client/: CMakeLists.txt  package.xml
share/simple_test_client/src/: simple_test_client.cpp
share/subsumption_force/: CMakeLists.txt  package.xml
share/subsumption_force/src/: subsumption_force.cpp
share/subsumption_velocity/: CMakeLists.txt  package.xml
share/subsumption_velocity/src/: subsumption_velocity.cpp
share/teleop_ackermann_keyboard/: package.xml  setup.cfg  setup.py
share/teleop_ackermann_keyboard/teleop_ackermann_keyboard/: teleop_ackermann_keyboard.py
share/trx6_description/: CMakeLists.txt  package.xml
share/trx6_description/launch/: lgsvl.launch.bak.py  lgsvl.launch.py  robot.launch.py
share/trx6_description/models/: trx6_mobile_robot_v1.1.urdf  trx6_mobile_robot_v1.urdf
share/trx6_firmware/ackermann_steering_control/: CMakeLists.txt  package.xml
share/trx6_firmware/ackermann_steering_control/scripts/: teleop_steering_keyboard.py
share/trx6_firmware/ackermann_steering_control/src/: ackermann_steering_controller_node.cpp  odometry.cpp
share/trx6_firmware/ros_arduino_comm/: CMakeLists.txt  package.xml
share/trx6_firmware/ros_arduino_comm/src/: ros_arduino_comm.cpp
share/trx6_model_description/: CMakeLists.txt
share/trx6_model_description/config/: ekf.lgsvl.yaml
share/trx6_model_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
share/trx6_model_description/launch/: basic_mobile_bot_v1.launch.py  basic_mobile_bot_v2.launch.py
share/trx6_model_description/log/: latest_build
share/trx6_model_description/models/: basic_mobile_bot_v2.urdf
share/trx6_model_description/models/trx6_mobile_robot_description/: Model.config
share/trx6_navigation2/: CMakeLists.txt  package.xml
share/trx6_navigation2/config/: ekf.bk.yaml  ekf.example.yaml  ekf.gps.yaml  ekf.lgsvl.yaml  ekf.trx6.yaml  ekf.yaml  nav2_params.bak.tka.yaml  nav2_params.bak.yaml  nav2_params.bok.yaml  nav2_params.yaml
share/trx6_navigation2/launch/: localization.launch.py
share/trx6_navigation2/maps/: empty_map.ppm  world.yaml
share/trx6_navigation2/params/: amcl.yaml  costmap_2d.yaml  map_server.yaml
share/velocity_control/: CMakeLists.txt  package.xml
share/velocity_control/src/: velocity_control.cpp
src/: LidarPerception.cpp  ransac_node.cpp
(+221 files in other folders)
